drkns 25.09.2017 08:43:19 +0100 - build 5042

1. 0003506: Падение при нажатии Shift+Enter на любой папке

drkns 24.09.2017 23:23:04 +0100 - build 5041

1. 0003501: Не гасить панели при запуске префикса по ассоциации из командной строки

drkns 24.09.2017 21:26:19 +0100 - build 5040

1. 0003504: Горячая клавиша продолжает действовать сразу после переназначения

drkns 24.09.2017 18:26:06 +0100 - build 5039

1. Уточнение 5038.2.

drkns 24.09.2017 16:59:37 +0100 - build 5038

1. 0003505: FarMenu.ini может оказаться папкой - не пытаемся в этом случае его выводить.

2. Некоторые уточнения в запускателе на тему файлов без расширений и логики поиска запускаемого файла.

zg 23.09.2017 15:25:28 +0300 - build 5037

1. при сохранении файла в редакторе текущей устанавливалась папка, в которой редактор был запущен.
   убрано.

drkns 21.09.2017 21:43:58 +0100 - build 5036

1. 0003499: При запуске из панели в командной строке отображается избыточный полный путь к файлу

2. Опция Use registered types" зачем-то влияла на запуск файлов без расширения из комстроки.
   Если кто-то помнит причину - пишите.

drkns 20.09.2017 21:35:37 +0100 - build 5035

1. Продолжение 5030.3.

drkns 20.09.2017 07:37:25 +0100 - build 5034

1. Уточнение 5032.

drkns 19.09.2017 23:14:44 +0100 - build 5033

1. 0003497: регэкспы перестали работать (более правильное исправление, чем 4492).

drkns 16.09.2017 23:23:44 +0100 - build 5032

1. Продолжение 5030.3.

drkns 15.09.2017 23:44:07 +0100 - build 5031

1. Продолжение 5030.3 - читаем/сохраняем только те folder shortcuts, которые надо, а не все существующие.

2. 0003492: Неправильная индикация в верхней статусной строке

drkns 15.09.2017 00:48:00 +0100 - build 5030

1. 0003490: Падение при нажатии F4 в пустом подменю

2. 0003491: Нелогичное создание подменю после отменённого редактирования

3. Folder shortcuts в целом упрощён и частично переделан.

drkns 13.09.2017 20:19:28 +0100 - build 5029

1. Откат 5027.2 и 5028.1.
