@@ -1,3 +1,7 @@
+drkns 25.09.2017 19:57:02 +0100 - build 5043
+
+1. Уточнение 5041.
+
 drkns 25.09.2017 08:43:19 +0100 - build 5042
 
 1. 0003506: Падение при нажатии Shift+Enter на любой папке
